image add logic, swagger
